# voxelgame

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: allocator.rs  buffer.rs  game.rs  input.rs  main.rs  mesh_simplifier.rs  network.rs  player.rs  pool.rs  registry.rs  renderer.rs  renderpass.rs
src/geometry/: mesh.rs  mod.rs  vertex.rs  vertexgroup.rs
src/memory/: allocator.rs  pool.rs
src/pipeline/: chunk_pipeline.rs  lines_pipeline.rs  mod.rs  skybox_pipeline.rs
src/registry/: mod.rs
src/shader/: chunks.frag  default.frag  default.vert  mod.rs
src/util/: aabb.rs  event.rs  logger.rs  mod.rs
src/voxel/: batchops.rs  mod.rs  voxelarray.rs  voxelevent.rs  voxelmath.rs  voxelstorage.rs
src/vulkano_win/: mod.rs
src/world/: block.rs  chunk.rs  dimension.rs  mod.rs
src/world/generators/: mod.rs  perlingenerator.rs
