[package]
name = "voxelgame"
version = "0.0.1"
authors = ["trashbyte"]

[dependencies]
cgmath = { version = "0.16.1", features = [ "swizzle" ] }
vulkano = "0.10.0"
vulkano-shader-derive = "0.10.0"
image = "0.19.0"
winit = "0.16.0"
time = "0.1.38"
rand = "0.5.5"
noise = "0.5.1"
fine_grained = "0.1.2"
smallvec = "0.6.5"
fnv = "1.0.6"

parking_lot = "*"
crossbeam = "0.7.2"
log = "0.4.8"
chrono = "0.4.7"
lazy_static = "*"
num = "*"