[package]
name = "voxelgame"
version = "0.0.1"
authors = ["trashbyte"]

[dependencies]
cgmath = { version = "0.16.1", features = [ "swizzle" ] }
vulkano = "0.10.0"
vulkano-shader-derive = "0.10.0"
image = "0.19.0"
winit = "0.16.0"
time = "0.1.38"
rand = "0.7.0"
noise = "0.5.1"
fine_grained = "0.1.2"
smallvec = "0.6.10"
fnv = "1.0.6"

parking_lot = "0.9.0"
crossbeam = "0.7.2"
log = "0.4.8"
chrono = "0.4.7"
lazy_static = "1.3.0"
num = "0.2.0"
string_cache = "0.7.3"
clap = "2.33.0"
linear-map = "1.2.0"

serde = { version = "1.0.98", features = ["derive"] }
serde_json = "1.0.40"

#TODO: Rewrite VoxelArray to use compile-time size.
#typenum = "1.10.0"
#generic-array = "0.13.2"